--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2648,6 +2648,9 @@
   "pages.condo.ticket.filters.Attribute": "Признак",
   "pages.condo.ticket.filters.Author": "Автор",
   "pages.condo.ticket.filters.ClientPhone": "Телефон заявителя",
+  "pages.condo.ticket.filters.HasComments": "Наличие комментариев",
+  "pages.condo.ticket.filters.OnlyUnansweredComments": "Только неотвеченные",
+  "pages.condo.ticket.filters.OnlyUnansweredCommentsTooltipHelp": "Будут показаны те комментарии от жителя, после которых нет комментариев от коллег",
   "pages.condo.ticket.filters.CompletedAt": "Дата выполнения",
   "pages.condo.ticket.filters.EnterFullName": "Введите ФИО",
   "pages.condo.ticket.filters.EnterOrganization": "Введите организацию",
@@ -2664,6 +2667,8 @@
   "pages.condo.ticket.filters.isResidentContact": "Житель/не житель",
   "pages.condo.ticket.filters.isResidentContact.false": "Не житель",
   "pages.condo.ticket.filters.isResidentContact.true": "Житель",
+  "pages.condo.ticket.filters.residentComment": "От жителя",
+  "pages.condo.ticket.filters.organizationComment": "От коллег",
   "pages.condo.ticket.filters.lastCommentAt": "Дата последнего комментария",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Акт выполненных работ",
   "pages.condo.ticket.generateDocument.label": "Сформировать акт",
@@ -2984,7 +2989,8 @@
   "ticket.modalQualityControl.title": "Уточните мнение жителя по заявке",
   "ticket.modalQualityControlChange.subtitle": "Измените оценку, если текущая не соответствует обратной связи от жителя",
   "ticket.modalQualityControlChange.title": "Хотите изменить оценку?",
-  "ticket.newResidentComment": "Новый комментарий жителя",
+  "ticket.newResidentComment": "Новый комментарий от жителя",
+  "ticket.newOrganizationComment": "Новый комментарий от коллеги",
   "ticket.qualityControl": "Контроль качества",
   "ticket.qualityControl.bad": "Плохо",
   "ticket.qualityControl.filter.label": "Оценка службы контроля качества",
