feat (condo): DOMA-11221 fix layout and add table tabs

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1766,6 +1766,9 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Load registry",
   "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "pages.billing.registry.uploadPage.title": "Registry upload",
+  "pages.clientCard.table.tabs.address": "Contact's requests for this address",
+  "pages.clientCard.table.tabs.entrance": "Residents' requests for the entrance",
+  "pages.clientCard.table.tabs.home": "Residents' requests for the building",
   "pages.clientCard.Title": "Contact {phone}",
   "pages.clientCard.addAddress": "Add address",
   "pages.clientCard.callRecordsLog": "Call records log",
