--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1766,6 +1766,9 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Cargar registro",
   "pages.billing.Status.success.title": "Pagos de personas físicas conectados",
   "pages.billing.registry.uploadPage.title": "Carga del registro",
+  "pages.clientCard.table.tabs.address": "Solicitudes del contacto para esta dirección",
+  "pages.clientCard.table.tabs.entrance": "Solicitudes de residentes por el portal",
+  "pages.clientCard.table.tabs.home": "Solicitudes de residentes del edificio",
   "pages.clientCard.Title": "Número de teléfono {phone}",
   "pages.clientCard.addAddress": "Añadir dirección",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
