--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1766,6 +1766,9 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Загрузить реестр",
   "pages.billing.Status.success.title": "Платежи от физлиц подключены",
   "pages.billing.registry.uploadPage.title": "Загрузка нового реестра",
+  "pages.clientCard.table.tabs.address": "Заявки контакта по этому адресу",
+  "pages.clientCard.table.tabs.entrance": "Заявки жителей по подъезду",
+  "pages.clientCard.table.tabs.home": "Заявки жителей по дому",
   "pages.clientCard.Title": "Контакт {phone}",
   "pages.clientCard.addAddress": "Добавить адрес",
   "pages.clientCard.callRecordsLog": "История звонков",
