fix(condo): DOMA-11468 add new plugin

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -370,6 +370,7 @@
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
   "api.document.WRONG_PROPERTY_ORGANIZATION": "Дом находится в другой организации",
   "api.global.queryBlocking.FORBIDDEN_REQUEST": "Данный запрос запрещен сервером, так как содержит заблокированные операции: {blockedOperations}",
+  "api.global.payloadLimit.PAYLOAD_LIMIT_EXCEEDED": "У вас слишком большое тело запроса. Попробуйте использовать переменные запроса",
   "api.global.rateLimit.RATE_LIMIT_EXCEEDED": "Вы сделали слишком много запросов за последнее время, повторите попытку позднее",
   "api.marketplace.invoice.ALREADY_CANCELED": "Нельзя изменять отмененный счет",
   "api.marketplace.invoice.ALREADY_PAID": "Нельзя изменять оплаченный счет",
