--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -370,6 +370,7 @@
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Contact with this phone number is already registered in this room",
   "api.document.WRONG_PROPERTY_ORGANIZATION": "Property has different organization",
   "api.global.queryBlocking.FORBIDDEN_REQUEST": "This request is denied by the server because it contains blocked operations: {blockedOperations}",
+  "api.global.payloadLimit.PAYLOAD_LIMIT_EXCEEDED": "Your request body is too large. Try using request variables",
   "api.global.rateLimit.RATE_LIMIT_EXCEEDED": "You've made too many requests recently, try again later",
   "api.marketplace.invoice.ALREADY_CANCELED": "Changing of canceled invoice is forbidden",
   "api.marketplace.invoice.ALREADY_PAID": "Changing of paid invoice is forbidden",
