--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -370,6 +370,7 @@
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Un contacto con este número de teléfono ya está registrado en esta propiedad",
   "api.document.WRONG_PROPERTY_ORGANIZATION": "La propiedad tiene una organización diferente",
   "api.global.queryBlocking.FORBIDDEN_REQUEST": "Esta petición ha sido denegada por el servidor porque contiene operaciones bloqueadas: {blockedOperations}",
+  "api.global.payloadLimit.PAYLOAD_LIMIT_EXCEEDED": "El cuerpo de su solicitud es demasiado grande. Intente utilizar variables de consulta",
   "api.global.rateLimit.RATE_LIMIT_EXCEEDED": "Has creado demasiadas incidencias. Por favor, inténtalo más tarde.",
   "api.marketplace.invoice.ALREADY_CANCELED": "No se puede modificar una factura cancelada",
   "api.marketplace.invoice.ALREADY_PAID": "No se puede modificar una factura pagada",
