--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1766,6 +1766,8 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Load registry",
   "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "pages.billing.registry.uploadPage.title": "Registry upload",
+  "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
+  "pages.clientCard.openAllTickets": "View all tickets",
   "pages.clientCard.table.tabs.address": "Contact's requests for this address",
   "pages.clientCard.table.tabs.entrance": "Residents' requests for the entrance",
   "pages.clientCard.table.tabs.home": "Residents' requests for the building",
