fix (condo): DOMA-11221 review fixes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1768,13 +1768,12 @@
   "pages.billing.registry.uploadPage.title": "Registry upload",
   "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
   "pages.clientCard.openAllTickets": "View all tickets",
-  "pages.clientCard.table.tabs.address": "Contact's requests for this address",
-  "pages.clientCard.table.tabs.entrance": "Residents' requests for the entrance",
-  "pages.clientCard.table.tabs.home": "Residents' requests for the building",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Contact's requests for this address",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Resident's requests for the entrance",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Resident's requests for the building",
   "pages.clientCard.Title": "Contact {phone}",
   "pages.clientCard.addAddress": "Add address",
   "pages.clientCard.callRecordsLog": "Call records log",
-  "pages.clientCard.contactTickets": "Contact tickets at this address",
   "pages.clientCard.editContact": "Edit contact",
   "pages.clientCard.showAllPropertyTickets": "Show all tickets at this property",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "for all addresses",
