--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1768,13 +1768,12 @@
   "pages.billing.registry.uploadPage.title": "Carga del registro",
   "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
   "pages.clientCard.openAllTickets": "Ver todos los tickets",
-  "pages.clientCard.table.tabs.address": "Solicitudes del contacto para esta dirección",
-  "pages.clientCard.table.tabs.entrance": "Solicitudes de residentes por el portal",
-  "pages.clientCard.table.tabs.home": "Solicitudes de residentes del edificio",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitudes del contacto para esta dirección",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitudes de residentes por el portal",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Solicitudes de residentes del edificio",
   "pages.clientCard.Title": "Número de teléfono {phone}",
   "pages.clientCard.addAddress": "Añadir dirección",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
-  "pages.clientCard.contactTickets": "Todas las incidencias de esta dirección",
   "pages.clientCard.editContact": "Editar contacto",
   "pages.clientCard.showAllPropertyTickets": "Todas incidencias de esta comunidad",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "a todas las direcciones",
