--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1768,13 +1768,12 @@
   "pages.billing.registry.uploadPage.title": "Загрузка нового реестра",
   "pages.clientCard.lastTicketsLoaded": "Загружены последние {count} заявок.",
   "pages.clientCard.openAllTickets": "Открыть все заявки",
-  "pages.clientCard.table.tabs.address": "Заявки контакта по этому адресу",
-  "pages.clientCard.table.tabs.entrance": "Заявки жителей по подъезду",
-  "pages.clientCard.table.tabs.home": "Заявки жителей по дому",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Заявки контакта по этому адресу",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Заявки жителей по подъезду",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Заявки жителей по дому",
   "pages.clientCard.Title": "Контакт {phone}",
   "pages.clientCard.addAddress": "Добавить адрес",
   "pages.clientCard.callRecordsLog": "История звонков",
-  "pages.clientCard.contactTickets": "Заявки контакта по этому адресу",
   "pages.clientCard.editContact": "Редактировать контакт",
   "pages.clientCard.showAllPropertyTickets": "Все заявки по этому адресу",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "по всем адресам",
