fix (condo): DOMA-11221 review fixes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1768,9 +1768,9 @@
   "pages.billing.registry.uploadPage.title": "Registry upload",
   "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
   "pages.clientCard.openAllTickets": "View all tickets",
-  "pages.clientCard.table.tabs.contactPropertyTickets": "Contact's requests for this address",
-  "pages.clientCard.table.tabs.residentsEntranceTickets": "Resident's requests for the entrance",
-  "pages.clientCard.table.tabs.residentsPropertyTickets": "Resident's requests for the building",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Tickets requests for this address",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Tickets requests for the entrance",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Tickets requests for the building",
   "pages.clientCard.Title": "Contact {phone}",
   "pages.clientCard.addAddress": "Add address",
   "pages.clientCard.callRecordsLog": "Call records log",
