--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1768,9 +1768,9 @@
   "pages.billing.registry.uploadPage.title": "Carga del registro",
   "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
   "pages.clientCard.openAllTickets": "Ver todos los tickets",
-  "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitudes del contacto para esta dirección",
-  "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitudes de residentes por el portal",
-  "pages.clientCard.table.tabs.residentsPropertyTickets": "Solicitudes de residentes del edificio",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitud de entradas para esta dirección",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitud de entradas para la entrada",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Solicitud de entradas para el edificio",
   "pages.clientCard.Title": "Número de teléfono {phone}",
   "pages.clientCard.addAddress": "Añadir dirección",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
