feat(condo): DOMA-9124 wip

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -536,6 +536,9 @@
   "api.user.signinAsUser.USER_NOT_FOUND": "User not found",
   "api.user.signinResidentUser.TOKEN_NOT_FOUND": "Something went wrong during authentication :( Try again or ask our support",
   "api.user.signinResidentUser.UNABLE_TO_CREATE_USER": "Something went wrong during registration :( Try again or ask our support",
+  "api.user.getAccessTokenByUserId.REFRESH_TOKEN_EXPIRED": "The refresh token has expired. Please log in again.",
+  "api.user.getAccessTokenByUserId.ERROR_GETTING_ACCESS_TOKEN": "An unknown error occurred while retrieving the access token.",
+  "api.user.getAccessTokenByUserId.INVALID_USER_AND_ORGANIZATION_ID": "The user does not belong to the specified organization.",
   "banking.category.ADDITIONAL_SERVICES.name": "Additional services",
   "banking.category.APARTMENT_BUILDING_MANAGEMENT.name": "Apartment building management",
   "banking.category.COLD_WATER_SUPPLY.name": "Cold water supply",
