--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -536,6 +536,9 @@
   "api.user.signinAsUser.USER_NOT_FOUND": "Usuario no encontrado",
   "api.user.signinResidentUser.TOKEN_NOT_FOUND": "No se ha podido iniciar sesión :( Inténtalo de nuevo o contacta con el servicio de asistencia técnica",
   "api.user.signinResidentUser.UNABLE_TO_CREATE_USER": "No se ha podido registrar :( Vuelve a intentarlo o contacta con el servicio de asistencia técnica",
+  "api.user.getAccessTokenByUserId.REFRESH_TOKEN_EXPIRED": "El token de actualización ha expirado. Por favor, inicie sesión de nuevo.",
+  "api.user.getAccessTokenByUserId.ERROR_GETTING_ACCESS_TOKEN": "Se produjo un error desconocido al obtener el token de acceso.",
+  "api.user.getAccessTokenByUserId.INVALID_USER_AND_ORGANIZATION_ID": "El usuario no pertenece a la organización especificada.",
   "banking.category.ADDITIONAL_SERVICES.name": "Servicios adicionales",
   "banking.category.APARTMENT_BUILDING_MANAGEMENT.name": "Gestión del bloque de pisos",
   "banking.category.COLD_WATER_SUPPLY.name": "Suministro de agua fría",
