--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -536,6 +536,9 @@
   "api.user.signinAsUser.USER_NOT_FOUND": "Пользователь не найден",
   "api.user.signinResidentUser.TOKEN_NOT_FOUND": "Не удалось войти :( Поробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.signinResidentUser.UNABLE_TO_CREATE_USER": "Не удалось зарегистрироваться :( Поробуйте ещё раз или обратитесь в тех-поддержку",
+  "api.user.getAccessTokenByUserId.REFRESH_TOKEN_EXPIRED": "Срок действия токена обновления истёк. Необходим повторный вход в систему",
+  "api.user.getAccessTokenByUserId.ERROR_GETTING_ACCESS_TOKEN": "Произошла неизвестная ошибка при получении токена доступа.",
+  "api.user.getAccessTokenByUserId.INVALID_USER_AND_ORGANIZATION_ID": "Пользователь не принадлежит указанной организации",
   "banking.category.ADDITIONAL_SERVICES.name": "Дополнительные услуги",
   "banking.category.APARTMENT_BUILDING_MANAGEMENT.name": "Управление многоквартирным домом",
   "banking.category.COLD_WATER_SUPPLY.name": "Холодное водоснабжение",
