--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2105,6 +2105,7 @@
   "pages.condo.meter.CommissioningDate": "Date of commissioning",
   "pages.condo.meter.Consumption": "Consumption",
   "pages.condo.meter.ControlReadingsDate": "Date of control readings",
+  "pages.condo.meter.CreatedAt": "Creation date",
   "pages.condo.meter.DeleteMeterAndReadings": "Delete meter and readings",
   "pages.condo.meter.EndDate": "End date",
   "pages.condo.meter.EnterAccountNumber": "Enter account number",
