--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2105,6 +2105,7 @@
   "pages.condo.meter.CommissioningDate": "Дата ввода в эксплуатацию",
   "pages.condo.meter.Consumption": "Расход",
   "pages.condo.meter.ControlReadingsDate": "Дата контрольных показаний",
+  "pages.condo.meter.CreatedAt": "Дата добавления",
   "pages.condo.meter.DeleteMeterAndReadings": "Удалить прибор и показания",
   "pages.condo.meter.EndDate": "Конечная дата",
   "pages.condo.meter.EnterAccountNumber": "Введите лицевой счет",
