feat(condo): DOMA-11565 change translations

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -10,6 +10,7 @@
   "AddHoldingEmployee": "Añadir empleado a organización",
   "AddItemUsingFileUpload": "Mediante carga de archivo",
   "AddItemUsingForm": "A través de formulario",
+  "AddedDate": "Fecha añadida",
   "And": "y",
   "AndOthers": "y otros",
   "AnotherContextAlreadyCreated": "Ya tienes otra integración conectada. Para cambiar la actual, ponte en contacto con el soporte técnico de «{company}»",
@@ -706,7 +707,6 @@
   "contact.EmptyList.header": "No hay contactos de vecinos todavía",
   "contact.EmptyList.manualCreateCard.body.description": "Rellenar el formulario indicando dirección, propiedad, número de teléfono y nombre completo",
   "contact.Verify": "Verificar",
-  "contact.column.header.createdAt": "Creado el",
   "contact.column.header.isVerified": "Está verificado",
   "contact.form.prompt.message": "El contacto no se guardará si abandona la página.",
   "contact.form.prompt.title": "No guardar contacto?",
@@ -2109,7 +2109,6 @@
   "pages.condo.meter.CommissioningDate": "Fecha de puesta en servicio",
   "pages.condo.meter.Consumption": "Consumo",
   "pages.condo.meter.ControlReadingsDate": "Fecha de verificación",
-  "pages.condo.meter.CreatedAt": "Fecha de creación",
   "pages.condo.meter.DeleteMeterAndReadings": "Eliminar contador y lecturas",
   "pages.condo.meter.EndDate": "Fecha final",
   "pages.condo.meter.EnterAccountNumber": "Introduzca la cuenta corriente",
