--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2316,6 +2316,7 @@
   "pages.condo.property.form.AreaSuffix": "кв. м.",
   "pages.condo.property.form.AreaTitle": "Площадь",
   "pages.condo.property.form.BuildingTabTitle": "Шахматка",
+  "pages.condo.property.form.ConfirmDeleteManyTitle": "Удалить дома?",
   "pages.condo.property.form.ConfirmDeleteMessage": "Восстановить будет невозможно",
   "pages.condo.property.form.ConfirmDeleteTitle": "Удалить дом?",
   "pages.condo.property.form.DeleteLabel": "Удалить дом",
